Agregar ruta para obtener las funciones por cine
